c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/keyword_wrong_case.c
int main(void) {
    RETURN 0;
}